feat: implemented adding to watch list
