# internal/docs/swagger.json
@@ -354,7 +354,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.WatchList"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.WatchList"
+                                            }
                                         }
                                     }
                                 }
@@ -369,6 +372,73 @@
                     },
                     "404": {
                         "description": "Profile not found",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_core_server.NotFoundResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_core_server.InternalServerErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "AccessTokenBearer": []
+                    }
+                ],
+                "description": "Retrieves a user watch list.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Adds an anime to a user watch list",
+                "parameters": [
+                    {
+                        "description": "Anime Data",
+                        "name": "Anime",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.AddToListParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_core_server.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.WatchList"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_core_server.UnauthorizedResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_core_server.NotFoundResponse"
                         }
@@ -463,6 +533,24 @@
                 }
             }
         },
+        "github_com_adeyemialameen04_unwind-be_internal_db_repository.AddToListParams": {
+            "type": "object",
+            "required": [
+                "anilistId",
+                "hianimeId"
+            ],
+            "properties": {
+                "anilistId": {
+                    "type": "string"
+                },
+                "hianimeId": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_adeyemialameen04_unwind-be_internal_db_repository.Profile": {
             "type": "object",
             "required": [
@@ -505,10 +593,12 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "mosh@mail.com"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Hello"
                 }
             }
         },
@@ -586,10 +676,12 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "mosh@mail.com"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Hello"
                 },
                 "username": {
                     "type": "string"
